log
Wed 20 Mar 2024 08:17:36 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:8: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |        push_back(L, dato);
      |        ^~~~~~~~~
      |        pushBack
cc1: all warnings being treated as errors
Compilation failed
f0f5d9d
